# vlm-service

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: session-transcript.jsonl
docs/plans/: 2026-02-27-knowledge-extraction-design.md  2026-02-28-real-integration-test-plan.md  2026-02-28-vlm-service.md
scripts/: real_test.py
tests/: conftest.py  test_files.py  test_integration.py  test_prompt.py  test_types.py
vlm_service/: __init__.py  files.py  prompt.py  provider.py  types.py
