[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlm-service"
version = "0.1.0"
description = "Generic VLM image/video analysis and report generation service"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
